<resources>
    <string name="app_name">Calcino</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="div">/</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="clr">CLR</string>
    <string name="x">x</string>
    <string name="equal">=</string>
</resources>
