<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="bottom"
                android:maxLines="2"
                android:singleLine="true"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/infoTextView"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_alignStart="@+id/editText"
                android:layout_below="@+id/editText"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/seven"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_above="@+id/four"
                android:layout_alignStart="@+id/infoTextView"
                android:layout_below="@+id/infoTextView"
                android:background="@android:color/darker_gray"
                android:text="7"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/four"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_above="@+id/one"
                android:layout_alignStart="@+id/seven"
                android:background="@android:color/darker_gray"
                android:text="4"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/one"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_above="@+id/dot"
                android:layout_alignStart="@+id/four"
                android:layout_toStartOf="@+id/two"
                android:background="@android:color/darker_gray"
                android:text="@string/_1"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/dot"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="@android:color/darker_gray"
                android:text="@string/dot"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/five"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_above="@+id/one"
                android:layout_alignTop="@+id/four"
                android:layout_toEndOf="@+id/four"
                android:background="@android:color/darker_gray"
                android:text="5"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/six"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_alignBottom="@+id/five"
                android:layout_alignTop="@+id/five"
                android:layout_toEndOf="@+id/five"
                android:background="@android:color/darker_gray"
                android:text="6"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_above="@+id/five"
                android:layout_below="@+id/infoTextView"
                android:layout_toEndOf="@+id/seven"
                android:background="@android:color/darker_gray"
                android:text="8"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_above="@+id/five"
                android:layout_alignEnd="@+id/six"
                android:layout_below="@+id/infoTextView"
                android:layout_toEndOf="@+id/eight"
                android:background="@android:color/darker_gray"
                android:text="9"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/clr"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_below="@+id/infoTextView"
                android:height="60dp"
                android:background="@android:color/darker_gray"
                android:text="@string/clr"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/nine" />

            <Button
                android:id="@+id/two"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_above="@+id/dot"
                android:layout_below="@+id/five"
                android:layout_toStartOf="@+id/six"
                android:background="@android:color/darker_gray"
                android:text="@string/_2"
                android:textColor="@android:color/white"
                android:textSize="24sp" />


            <Button
                android:id="@+id/three"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_alignBottom="@+id/two"
                android:layout_below="@+id/six"
                android:layout_toStartOf="@+id/mul"
                android:background="@android:color/darker_gray"
                android:text="@string/_3"
                android:textColor="@android:color/white"
                android:textSize="24sp" />


            <Button
                android:id="@+id/zero"
                android:layout_width="95dp"
                android:layout_height="90dp"
                android:layout_alignBottom="@+id/dot"
                android:layout_below="@+id/two"

                android:layout_toEndOf="@+id/dot"
                android:background="@android:color/darker_gray"
                android:text="@string/_0"
                android:textColor="@android:color/white"
                android:textSize="24sp" />


            <Button
                android:id="@+id/equal"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_alignBottom="@+id/zero"
                android:layout_below="@+id/three"
                android:layout_toEndOf="@+id/five"

                android:background="@android:color/darker_gray"
                android:text="@string/equal"
                android:textColor="@android:color/white"
                android:textSize="24sp" />


            <Button
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_alignEnd="@+id/clr"
                android:layout_below="@+id/clr"

                android:background="@android:color/darker_gray"
                android:text="@string/div"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_toEndOf="@+id/six" />


            <Button
                android:id="@+id/mul"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_below="@+id/divide"
                android:background="@android:color/darker_gray"

                android:text="@string/x"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/six" />


            <Button
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_below="@+id/mul"
                android:background="@android:color/darker_gray"

                android:text="@string/sub"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/equal" />


            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_alignBottom="@+id/equal"
                android:layout_below="@+id/sub"

                android:background="@android:color/darker_gray"
                android:text="@string/add"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/equal" />

        </RelativeLayout>
    </ScrollView>
</layout>